# conjugate-gradient-method

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  area.hpp  function.hpp  main.cpp  optimization_method.hpp  stop_criterion.hpp
src/: Makefile  Vector.cpp  Vector.hpp  area.cpp  area.hpp  function.cpp  function.hpp  main.cpp  optim_method_cli.cpp  optim_method_cli.hpp  optimization_method.cpp  optimization_method.hpp  stop_criterion.cpp  stop_criterion.hpp
